--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.6",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.5",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.5",
-    "@types/express": "^4.17.21",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/jsonwebtoken": "^9.0.5"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-     "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0"
   }
 }
